--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,19 +5,16 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     
-    
-   
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-    
   </head>
 
   <body>
     <nav class="navbar  navbar-expand-sm navbar-light bg-light">
-      <a class="navbar-brand" href=" <%=root_path %>">Cocktail Book</a>
+      <%= link_to "Cocktail Book", root_path, class: "navbar-brand"%>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
@@ -28,7 +25,6 @@
         <%= form_tag search_cocktails_path, method: :post, class: "form-inline ml-auto"  do %>
           <div class="form-group mx-sm-3 mb-2 search">
               <%= text_field_tag :query, nil, placeholder: "search by ingredient", class: "form-control" %>
-              
           </div>  
               <%= submit_tag "Search Cocktails", class: "btn btn-primary " %>
         <% end %>
@@ -36,13 +32,13 @@
         <ul class="navbar-nav ml-auto">
       
               <li class="nav-item">
-                <a class="btn btn-primary" id="account-btn"<%= link_to "Cocktails", cocktails_path%> </a>
+                <%= link_to "Cocktails", cocktails_path, class: "btn btn-primary", id: "account-btn" %>
               </li>
               <li class="nav-item">
-                <a class="btn btn-primary" id="account-btn"<%= link_to "Account", user_path(current_user)%> </a>
+                <%= link_to "Account", user_path(current_user), class: "btn btn-primary", id: "account-btn" %>
               </li>
               <li class="nav-item">
-                <a class="btn btn-danger" id="account-btn" <%= link_to "Log Out", logout_path(current_user), method: :delete %> </a>
+                <%= link_to "Logout", logout_path(current_user), class: "btn btn-danger", id: "account-btn" %>
               </li>
           <%end%>
         </ul>
