--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
 
   <body>
     <nav class="navbar  navbar-expand-sm navbar-light bg-light">
+      
       <%= link_to "Cocktail Book", root_path, class: "navbar-brand"%>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -22,7 +23,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
       <%if current_user %>
-        <%= form_tag search_cocktails_path, method: :post, class: "form-inline ml-auto"  do %>
+        <%= form_tag search_cocktails_path, method: :get, class: "form-inline ml-auto"  do %>
           <div class="form-group mx-sm-3 mb-2 search">
               <%= text_field_tag :query, nil, placeholder: "search by ingredient", class: "form-control" %>
           </div>  
@@ -38,7 +39,7 @@
                 <%= link_to "Account", user_path(current_user), class: "btn btn-primary", id: "account-btn" %>
               </li>
               <li class="nav-item">
-                <%= link_to "Logout", logout_path(current_user), class: "btn btn-danger", id: "account-btn" %>
+                <%= link_to "Logout", logout_path(current_user), method: :delete, class: "btn btn-danger", id: "account-btn" %>
               </li>
           <%end%>
         </ul>
