--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -4,7 +4,7 @@
           <div class="notice"><%= flash[:alert] %></div>
     <% end %>
 
-    <h2 class="mb-1">Cocktail Book</h2><br>
+    <h2 class="mb-1">Cocktail Keeper</h2><br>
     <h5 class="mb-5">Find your new favorite drink recipe. Dont forget to add a recipe for the community!</h5>
 
     <% if !current_user%>    
