--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Cocktail Book</title>
+    <title>Cocktail Keeper</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     
@@ -15,7 +15,7 @@
   <body>
     <nav class="navbar  navbar-expand-sm navbar-light bg-light">
       
-      <%= link_to "Cocktail Book", root_path, class: "navbar-brand"%>
+      <%= link_to "Cocktail Keeper", root_path, class: "navbar-brand"%>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
@@ -53,7 +53,7 @@
 </div>
 
 <footer class="footer fixed-bottom">
-      <span class="text-muted small mb-0">© Copyright 2020 Cocktail Book</span>
+      <span class="text-muted small mb-0">© Copyright 2020 Cocktail Keeper</span>
 </footer>
 
 
