add cocktail association for image attachment, add image upload to form, add image tag to render associated iamge for cocktail if present

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -49,6 +49,11 @@ html, body {
     right: 0px;
   }
 
+  .cocktail-image {
+    height: 400px;
+    width: 400px;
+  }
+
 
   .footer {
   font-family: 'Montserrat', sans-serif;
@@ -73,8 +78,6 @@ html, body {
   .logo {
     margin: 10px;
   }
-
-   
   
   #user-greeting {
     padding-top: 0.5%;
